# Robotics-Controller-Yocto-Src

./: .clangd  .gitignore  BUILD_SYSTEM_README.md  META_ROBOTICS_AUTOMATION.md  README.md  TOOLING_SUMMARY.md  build.sh
.github/chatmodes/: BeastMode.chatmode.md
src/: CMakeLists.txt
src/cmake/: README.md  RoboticsComponents.cmake  RoboticsConfig.cmake  RoboticsDependencies.cmake  RoboticsInstallation.cmake  RoboticsTesting.cmake
src/config/: robotics-controller.conf
src/robotics-controller/: CMakeLists.txt  main.cpp
src/robotics-controller/actuators/: CMakeLists.txt  actuator_manager.cpp  actuator_manager.hpp
src/robotics-controller/actuators/motor/: CMakeLists.txt  README.md  motor_controller.cpp  motor_controller.hpp
src/robotics-controller/actuators/servo/: CMakeLists.txt  README.md  servo_controller.cpp  servo_controller.hpp
src/robotics-controller/communication/: CMakeLists.txt  communication_hub.cpp  communication_hub.hpp
src/robotics-controller/communication/serial/: CMakeLists.txt  serial_communication.cpp  serial_communication.hpp
src/robotics-controller/communication/web/: CMakeLists.txt  web_server.cpp  web_server.hpp
src/robotics-controller/config/: version.hpp.in
src/robotics-controller/core/: CMakeLists.txt  state_machine.cpp  state_machine.hpp  system_manager.cpp  system_manager.hpp
src/robotics-controller/navigation/: CMakeLists.txt  navigation_engine.cpp  navigation_engine.hpp
src/robotics-controller/sensors/: CMakeLists.txt  sensor_manager.cpp  sensor_manager.hpp
src/robotics-controller/sensors/button/: CMakeLists.txt  button_sensor.cpp  button_sensor.hpp
src/robotics-controller/sensors/distance/: CMakeLists.txt  distance_sensor.cpp  distance_sensor.hpp
src/robotics-controller/sensors/gps/: CMakeLists.txt  gps_sensor.cpp  gps_sensor.hpp
src/robotics-controller/sensors/imu/: CMakeLists.txt  imu_sensor.cpp  imu_sensor.hpp
src/robotics-controller/sensors/ir/: CMakeLists.txt  ir_sensor.cpp  ir_sensor.hpp
src/robotics-controller/sensors/line/: CMakeLists.txt  line_sensor_array.cpp  line_sensor_array.hpp
src/robotics-controller/vision/: CMakeLists.txt  vision_processor.cpp  vision_processor.hpp
src/web-interface/: CMakeLists.txt  README.md  index.html  script.js  styles.css
